--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,11 +40,12 @@
   }
   
   body {
-    @apply bg-background text-text antialiased;
+    @apply bg-background text-text antialiased overflow-x-hidden;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
   
   html {
+    @apply overflow-x-hidden;
     /* scroll-behavior: smooth; */
   }
 
@@ -77,7 +78,7 @@
 
 @layer components {
   .container-custom {
-    @apply max-w-7xl mx-auto;
+    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full box-border;
   }
   
   .btn-primary {
